# pm2regen-ed

./: .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER.txt  README.md  README_KOREAN.md  VERSION_HISTORY  launch-pm2regen-ed.desktop
inc/: file.h  langPack.h  main.h  offset.h  save.h  ui.h  vt.h
src/: file.c  langPack.c  main.c  save.c  ui.c  vt.c
